--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ h1 {
   position: relative;
   font-size: 1.7rem;
   left: 20%;
+  line-height: 2;
 }
 
 .answer {
@@ -120,4 +121,10 @@ h1 {
   justify-content: space-between;
   position: relative;
   left: 20%;
+}
+
+.nextButton {
+  position: absolute;
+  bottom: 4rem;
+  left: 30%;
 }
