--- a/style.css
+++ b/style.css
@@ -12,13 +12,12 @@ html {
 body {
   font-family: 'Press Start 2P', sans-serif;
   color: #eee;
-  background-color: rgb(14, 49, 26);
+  background-image: url('http://www.stadtillstrand.se/wp-content/uploads/2021/05/visby-gotland-skymning.jpg');
 }
 
 header {
   position: relative;
   height: 35vh;
-  border-bottom: 7px solid #eee;
   size: 1px;
 }
 
@@ -58,6 +57,7 @@ h1 {
   position: absolute;
   top: 2rem;
   right: 2rem;
+  color: black;
 }
 
 .again {
@@ -69,15 +69,15 @@ h1 {
 
 .btn {
   border: none;
-  background-color: #eee;
-  color: #222;
+  background-color: rgb(20, 17, 17);
+  color: rgb(255, 255, 255);
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   padding: 2rem 3rem;
   cursor: pointer;
 }
 
 .btn:hover {
-  background-color: #ccc;
+  background-color: rgb(59, 56, 56);
 }
 
 .start {
@@ -89,15 +89,17 @@ h1 {
 
 .check {
   position: absolute;
-  bottom: 2rem;
+  bottom: 18rem;
   left: 2rem;
   font-size: 2rem;
 }
 
 .label-highscore {
   position: absolute;
-  bottom: 2rem;
+  bottom: 20rem;
   right: 2rem;
+  color: rgb(20, 17, 17);
+  font-weight: 800;
 }
 
 #results {
@@ -109,7 +111,7 @@ h1 {
 
 .question {
   position: relative;
-  font-size: 1.7rem;
+  font-size: 2rem;
   left: 20%;
   line-height: 2;
 }
